--- a/src/SsisBuild.Builder/SsisBuild.Builder.csproj
+++ b/src/SsisBuild.Builder/SsisBuild.Builder.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SsisBuild</RootNamespace>
     <AssemblyName>SsisBuild.Builder</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,9 +56,12 @@
   <ItemGroup>
     <Compile Include="Builder.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="Decryptor.cs" />
+    <Compile Include="InvalidPaswordException.cs" />
     <Compile Include="ProjectManifest.cs" />
     <Compile Include="PackageManifest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReleaseNotesHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SsisBuild.Logger\SsisBuild.Logger.csproj">
