Major refactoring and cleaning.

--- a/src/SsisBuild.Builder/SsisBuild.Builder.csproj
+++ b/src/SsisBuild.Builder/SsisBuild.Builder.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Decryptor.cs" />
     <Compile Include="InvalidPaswordException.cs" />
+    <Compile Include="ParameterDetail.cs" />
     <Compile Include="ProjectManifest.cs" />
     <Compile Include="PackageManifest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
