Added handling when package password is different from project password

--- a/src/SsisBuild.Builder/SsisBuild.Builder.csproj
+++ b/src/SsisBuild.Builder/SsisBuild.Builder.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Decryptor.cs" />
     <Compile Include="InvalidPaswordException.cs" />
     <Compile Include="ParameterDetail.cs" />
+    <Compile Include="PasswordEventListener.cs" />
     <Compile Include="ProjectManifest.cs" />
     <Compile Include="PackageManifest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
