--- a/src/SsisBuild.Builder/SsisBuild.Builder.csproj
+++ b/src/SsisBuild.Builder/SsisBuild.Builder.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuildArguments.cs" />
     <Compile Include="Builder.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Decryptor.cs" />
