--- a/src/SsisBuild.Builder/SsisBuild.Builder.csproj
+++ b/src/SsisBuild.Builder/SsisBuild.Builder.csproj
@@ -32,41 +32,44 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.AnalysisServices.Project">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\PrivateAssemblies\Microsoft.AnalysisServices.Project.DLL</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.DataTransformationServices.VsIntegration">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\PrivateAssemblies\Microsoft.DataTransformationServices.VsIntegration.DLL</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.DataWarehouse.VsIntegration">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\PrivateAssemblies\Microsoft.DataWarehouse.VsIntegration.DLL</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.SqlServer.ManagedDTS, Version=13.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Windows\Microsoft.NET\assembly\GAC_MSIL\Microsoft.SqlServer.ManagedDTS\v4.0_13.0.0.0__89845dcd8080cc91\Microsoft.SqlServer.ManagedDTS.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="BuildArguments.cs" />
+    <Compile Include="Models\BuildArguments.cs" />
     <Compile Include="Builder.cs" />
-    <Compile Include="Constants.cs" />
-    <Compile Include="Decryptor.cs" />
+    <Compile Include="Helpers\XmlHelpers.cs" />
     <Compile Include="InvalidPaswordException.cs" />
-    <Compile Include="ParameterDetail.cs" />
-    <Compile Include="PasswordEventListener.cs" />
-    <Compile Include="ProjectManifest.cs" />
-    <Compile Include="PackageManifest.cs" />
+    <Compile Include="Models\Configuration.cs" />
+    <Compile Include="Models\DataType.cs" />
+    <Compile Include="Models\Package.cs" />
+    <Compile Include="Models\Parameter.cs" />
+    <Compile Include="Models\ParameterSource.cs" />
+    <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\ProjectConnection.cs" />
+    <Compile Include="Models\ProjectFile.cs" />
+    <Compile Include="Models\ProjectManifest.cs" />
+    <Compile Include="Models\ProjectParams.cs" />
+    <Compile Include="Models\ProtectionLevel.cs" />
+    <Compile Include="Models\TargetServerVersion.cs" />
+    <Compile Include="Models\UserConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReleaseNotesHelper.cs" />
   </ItemGroup>
@@ -75,6 +78,9 @@
       <Project>{6fadb9e9-cf51-4caf-8b82-b4b93fd367eb}</Project>
       <Name>SsisBuild.Logger</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
