Converted static create methods to project factory for future unit testing

--- a/src/SsisBuild.Core/SsisBuild.Core.csproj
+++ b/src/SsisBuild.Core/SsisBuild.Core.csproj
@@ -58,11 +58,13 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="DataType.cs" />
     <Compile Include="InvalidXmlException.cs" />
+    <Compile Include="IProjectFactory.cs" />
     <Compile Include="Package.cs" />
     <Compile Include="Parameter.cs" />
     <Compile Include="ParameterSource.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="ProjectConnection.cs" />
+    <Compile Include="ProjectFactory.cs" />
     <Compile Include="ProjectFile.cs" />
     <Compile Include="ProjectManifest.cs" />
     <Compile Include="ProjectParams.cs" />
