--- a/src/SsisBuild.Core/SsisBuild.Core.csproj
+++ b/src/SsisBuild.Core/SsisBuild.Core.csproj
@@ -58,15 +58,15 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="DataType.cs" />
     <Compile Include="InvalidXmlException.cs" />
-    <Compile Include="IProjectFactory.cs" />
+    <Compile Include="IProject.cs" />
     <Compile Include="Package.cs" />
     <Compile Include="Parameter.cs" />
     <Compile Include="ParameterSource.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="ProjectConnection.cs" />
-    <Compile Include="ProjectFactory.cs" />
     <Compile Include="ProjectFile.cs" />
     <Compile Include="ProjectManifest.cs" />
+    <Compile Include="ProjectNotLoadedException.cs" />
     <Compile Include="ProjectParams.cs" />
     <Compile Include="ProtectionLevel.cs" />
     <Compile Include="UserConfiguration.cs" />
