--- a/src/SsisBuild/SsisBuild.csproj
+++ b/src/SsisBuild/SsisBuild.csproj
@@ -47,6 +47,8 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="IBuildArguments.cs" />
+    <Compile Include="IBuilder.cs" />
     <Compile Include="InvalidArgumentException.cs" />
     <Compile Include="BuildArguments.cs" />
     <Compile Include="Builder.cs" />
