--- a/src/SsisBuild.Tests/SsisBuild.Tests.csproj
+++ b/src/SsisBuild.Tests/SsisBuild.Tests.csproj
@@ -30,6 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Accessibility" />
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Moq, Version=4.5.30.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.5.30\lib\net45\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,13 +66,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BuildArgumentsTests.cs" />
+    <Compile Include="BuilderTests.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SsisBuildTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SsisBuild.Core\SsisBuild.Core.csproj">
+      <Project>{01657a26-be3b-4a6e-a193-e175096f54ba}</Project>
+      <Name>SsisBuild.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SsisBuild.Logger\SsisBuild.Logger.csproj">
+      <Project>{6fadb9e9-cf51-4caf-8b82-b4b93fd367eb}</Project>
+      <Name>SsisBuild.Logger</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SsisBuild\SsisBuild.csproj">
       <Project>{8b1b1e18-1ba7-4593-afe2-76064bd213c4}</Project>
       <Name>SsisBuild</Name>
