--- a/src/SsisBuild/SsisBuild.csproj
+++ b/src/SsisBuild/SsisBuild.csproj
@@ -54,6 +54,7 @@
     <Compile Include="BuildArguments.cs" />
     <Compile Include="Builder.cs" />
     <Compile Include="InvalidArgumentException.cs" />
+    <Compile Include="InvalidReleaseNotesException.cs" />
     <Compile Include="InvalidTokenException.cs" />
     <Compile Include="MissingRequiredArgumentException.cs" />
     <Compile Include="NoValueProvidedException.cs" />
@@ -61,6 +62,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="ProjectFileNotFoundException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReleaseNotes.cs" />
+    <Compile Include="ReleaseNotesHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
