--- a/src/SsisBuild.Core.Tests/SsisBuild.Core.Tests.csproj
+++ b/src/SsisBuild.Core.Tests/SsisBuild.Core.Tests.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{01657A26-BE3B-4A6E-A193-E175096F54BA}</ProjectGuid>
+    <ProjectGuid>{066D0E51-E30A-4799-BC71-1069FB52E9AC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SsisBuild.Core</RootNamespace>
-    <AssemblyName>SsisBuild.Core</AssemblyName>
+    <RootNamespace>SsisBuild.Core.Tests</RootNamespace>
+    <AssemblyName>SsisBuild.Core.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,7 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,59 +30,45 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.IO.Compression.FileSystem" />
-    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
+    <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\packages\xunit.abstractions.2.0.0\lib\net35\xunit.abstractions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="xunit.assert, Version=2.1.0.3179, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\packages\xunit.assert.2.1.0\lib\dotnet\xunit.assert.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="xunit.core, Version=2.1.0.3179, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\packages\xunit.extensibility.core.2.1.0\lib\dotnet\xunit.core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="xunit.execution.desktop, Version=2.1.0.3179, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <HintPath>..\packages\xunit.extensibility.execution.2.1.0\lib\net45\xunit.execution.desktop.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SharedAssemblyInfo.cs">
-      <Link>Properties\SharedAssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="ConfigurationParameter.cs" />
-    <Compile Include="Helpers\XmlHelper.cs" />
-    <Compile Include="InvalidPaswordException.cs" />
-    <Compile Include="Configuration.cs" />
-    <Compile Include="DataType.cs" />
-    <Compile Include="InvalidXmlException.cs" />
-    <Compile Include="IParameter.cs" />
-    <Compile Include="IProject.cs" />
-    <Compile Include="IProjectFile.cs" />
-    <Compile Include="IProjectManifest.cs" />
-    <Compile Include="Package.cs" />
-    <Compile Include="Parameter.cs" />
-    <Compile Include="ParameterSource.cs" />
-    <Compile Include="Project.cs" />
-    <Compile Include="ProjectConnection.cs" />
-    <Compile Include="ProjectFile.cs" />
-    <Compile Include="ProjectManifest.cs" />
-    <Compile Include="ProjectNotLoadedException.cs" />
-    <Compile Include="ProjectParameter.cs" />
-    <Compile Include="ProjectParams.cs" />
-    <Compile Include="ProtectionLevel.cs" />
-    <Compile Include="UserConfiguration.cs" />
+    <Compile Include="ConfigurationParameterTests.cs" />
+    <Compile Include="Helpers.cs" />
+    <Compile Include="ProjectParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SsisBuild.Logger\SsisBuild.Logger.csproj">
-      <Project>{6fadb9e9-cf51-4caf-8b82-b4b93fd367eb}</Project>
-      <Name>SsisBuild.Logger</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\SsisBuild.Core\SsisBuild.Core.csproj">
+      <Project>{01657A26-BE3B-4A6E-A193-E175096F54BA}</Project>
+      <Name>SsisBuild.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
