Added Logger tests, completed Core tests

--- a/src/SsisBuild.Core/SsisBuild.Core.csproj
+++ b/src/SsisBuild.Core/SsisBuild.Core.csproj
@@ -56,6 +56,8 @@
     <Compile Include="ConfigurationParameter.cs" />
     <Compile Include="Helpers\XmlHelper.cs" />
     <Compile Include="InvalidConfigurationNameException.cs" />
+    <Compile Include="InvalidDeploymentModelException.cs" />
+    <Compile Include="InvalidExtensionException.cs" />
     <Compile Include="InvalidPaswordException.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="DataType.cs" />
