--- a/src/SsisDeploy/SsisDeploy.csproj
+++ b/src/SsisDeploy/SsisDeploy.csproj
@@ -50,10 +50,19 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="ArgumentsProcessingException.cs" />
+    <Compile Include="CatalogTools.cs" />
     <Compile Include="DeployArguments.cs" />
-    <Compile Include="InvalidArgumentException.cs" />
+    <Compile Include="Deployer.cs" />
+    <Compile Include="ICatalogTools.cs" />
+    <Compile Include="IDeployArguments.cs" />
+    <Compile Include="IDeployer.cs" />
+    <Compile Include="InvalidTokenException.cs" />
+    <Compile Include="MissingRequiredArgumentException.cs" />
+    <Compile Include="ObjectTypes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SensitiveParameter.cs" />
     <Compile Include="SsisDbDataLayer.cs">
       <DependentUpon>SsisDbDataLayer.dal</DependentUpon>
     </Compile>
@@ -67,6 +76,10 @@
     <ProjectReference Include="..\SsisBuild.Core\SsisBuild.Core.csproj">
       <Project>{01657A26-BE3B-4A6E-A193-E175096F54BA}</Project>
       <Name>SsisBuild.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SsisBuild.Logger\SsisBuild.Logger.csproj">
+      <Project>{6FADB9E9-CF51-4CAF-8B82-B4B93FD367EB}</Project>
+      <Name>SsisBuild.Logger</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
