--- a/src/SsisBuild.Tests.Helpers/SsisBuild.Tests.Helpers.csproj
+++ b/src/SsisBuild.Tests.Helpers/SsisBuild.Tests.Helpers.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E1F250A7-8D66-46AD-A119-026FCCC3E6AB}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{17AFE8AD-F52E-44E5-B0F6-1B24F17EDB1B}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SsisDeploy</RootNamespace>
-    <AssemblyName>ssisdeploy</AssemblyName>
+    <RootNamespace>SsisBuild.Tests.Helpers</RootNamespace>
+    <AssemblyName>SsisBuild.Tests.Helpers</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,12 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.SqlServer.Types, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.SqlServer.Types.11.0.2\lib\net20\Microsoft.SqlServer.Types.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -47,41 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SharedAssemblyInfo.cs">
-      <Link>Properties\SharedAssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="ArgumentsProcessingException.cs" />
-    <Compile Include="CatalogTools.cs" />
-    <Compile Include="DeployArguments.cs" />
-    <Compile Include="Deployer.cs" />
-    <Compile Include="ICatalogTools.cs" />
-    <Compile Include="IDeployArguments.cs" />
-    <Compile Include="IDeployer.cs" />
-    <Compile Include="InvalidTokenException.cs" />
-    <Compile Include="MissingRequiredArgumentException.cs" />
-    <Compile Include="ObjectTypes.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="ProjectFileNotFoundException.cs" />
+    <Compile Include="Fakes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SensitiveParameter.cs" />
-    <Compile Include="SsisDbDataLayer.cs">
-      <DependentUpon>SsisDbDataLayer.dal</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <Form Include="SsisDbDataLayer.dal" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SsisBuild.Core\SsisBuild.Core.csproj">
-      <Project>{01657A26-BE3B-4A6E-A193-E175096F54BA}</Project>
-      <Name>SsisBuild.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SsisBuild.Logger\SsisBuild.Logger.csproj">
-      <Project>{6FADB9E9-CF51-4CAF-8B82-B4B93FD367EB}</Project>
-      <Name>SsisBuild.Logger</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
